<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity_header">QUANTITY</string>
    <string name="quantity_add_button_text">+</string>
    <string name="quantity_subtract_button_text">-</string>
    <string name="quantity_value">1</string>
    <string name="order_summary_header">Order Summary</string>
    <string name="price_value">$0.00</string>
    <string name="order_button_text">order</string>
    <string name="clear_button_text">clear</string>
    <string name="order_confirmed"></string>
    <string name="cb_text_topping_whip">Whipped Cream (+$1)</string>
    <string name="cb_text_topping_choco">Chocolate (+$2)</string>
    <string name="toppings_header">Toppings</string>
    <string name="edittext_name_hint">Name</string>
</resources>
